@@ -2,7 +2,7 @@ use strict;
 use warnings FATAL => 'all';
 
 use Test::Requires 'HTTP::Message::PSGI';
-use Test::More tests => 66;
+use Test::More tests => 71;
 use Test::NoWarnings 1.04 ':early';
 use Test::Deep;
 
@@ -13,6 +13,11 @@ use HTTP::Request::Common;
 my $app_foo = sub {
     my $env = shift;
     return [ 200, ['Content-Type' => 'text/plain' ], [ 'this is the foo app' ]];
+};
+
+my $app_foo2 = sub {
+    my $env = shift;
+    return [ 200, ['Content-Type' => 'text/html' ], [ 'this is the alternative foo app' ]];
 };
 
 my $app_bar = sub {
@@ -34,15 +39,20 @@ my $app_baz = sub {
     my $useragent = Test::LWP::UserAgent->new;
     my $useragent2 = Test::LWP::UserAgent->new;
 
-    Test::LWP::UserAgent->register_domain('foo', $app_foo);
-    $useragent->register_domain('bar', $app_bar);
-    Test::LWP::UserAgent->register_domain('bar', $app_bar2);
-    $useragent2->register_domain('baz', $app_baz);
-    $useragent->map_response('http://foo', HTTP::Response->new(503));
+    Test::LWP::UserAgent->register_psgi('foo', $app_foo);
+    $useragent->register_psgi('bar', $app_bar);
+    Test::LWP::UserAgent->register_psgi('bar', $app_bar2);
+    $useragent2->register_psgi('baz', $app_baz);
 
     test_send_request('foo app (registered globally)', $useragent, GET('http://foo'),
         200, [ 'Content-Type' => 'text/plain' ], 'this is the foo app');
 
+    $useragent->register_psgi('foo' , $app_foo2);
+
+    test_send_request('foo app (registered on the object)', $useragent, GET('http://foo'),
+        200, [ 'Content-Type' => 'text/html' ], 'this is the alternative foo app');
+
+    # the object registration takes priority
     test_send_request('bar app (registered on the object)', $useragent, GET(URI->new('http://bar')),
         200, [ 'Content-Type' => 'text/html' ], 'this is the bar app');
 
@@ -53,30 +63,37 @@ my $app_baz = sub {
         404, [ ], '');
 
 
-    $useragent->unregister_domain('bar', 'this_instance_only');
+    $useragent->unregister_psgi('bar', 'this_instance_only');
 
     test_send_request('backup bar app is now available to this instance', $useragent, GET('http://bar'),
         200, [ 'Content-Type' => 'text/plain' ], 'this is the alternative bar app');
 
-    $useragent->unregister_domain('bar');
+    $useragent->unregister_psgi('bar');
 
     test_send_request('bar app (was registered on the instance, but now removed everywhere)',
         $useragent, GET('http://bar'),
         404, [ ], '');
 
 
-    $useragent->unregister_domain('foo', 'this_instance_only');
+    # mask a mapping from just this one instance
+    $useragent->unregister_psgi('foo', 'instance_only');
 
-    test_send_request('foo app was registered globally, but now removed from the instance only',
+    test_send_request('foo app was registered on both, but now removed from the instance only',
         $useragent, GET('http://foo'),
-        503, [ ], '');
+        200, [ 'Content-Type' => 'text/plain' ], 'this is the foo app');
 
     test_send_request('foo app (registered globally; still available for other instances)',
         $useragent2, GET('http://foo'),
         200, [ 'Content-Type' => 'text/plain' ], 'this is the foo app');
 
+    # mask the global mapping entirely
+    $useragent->register_psgi('foo', undef);
+    test_send_request('foo app was registered globally, but now removed from the instance only',
+        $useragent, GET('http://foo'),
+        404, [ ], '');
 
-    $useragent->unregister_all('this_instance_only');
+
+    $useragent->unmap_all('this_instance_only');
 
     test_send_request('baz app is not available on this instance', $useragent, GET('http://baz'),
         404, [ ], '');
@@ -84,11 +101,7 @@ my $app_baz = sub {
     test_send_request('baz app is still available on other instances', $useragent2, GET('http://baz'),
         200, [ 'Content-Type' => 'image/jpeg' ], 'this is the baz app');
 
-    $useragent->unregister_all;
-
-    test_send_request('foo removed everywhere; response mapping now visible',
-        $useragent, GET('http://foo'),
-        503, [ ], '');
+    $useragent->unmap_all;
 
     test_send_request('bar app now removed', $useragent, GET('http://baz'),
         404, [ ], '');
