@@ -1,6 +1,16 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - cleanup of domain->PSGI app functionality for stable release:
+            - string mappings in map_response now match against the URI host,
+              not the full URI string
+            - register_domain is now called register_psgi; unregister_domain
+              is now unregister_psgi; unregister_all is removed, as unmap_all
+              will do the right thing
+            - domain mappings no longer take priority over other mapped
+              responses; all mappings are now tested in the order they were
+              added (with instance mappings matched first over global
+              mappings, as before)
 
 0.006-TRIAL  2012-07-28 16:03:24 PDT-0700 (Karen Etheridge)
           - new domain->PSGI app functionality, and methods register_domain,
